--- a/assets/scss/_c-form.scss
+++ b/assets/scss/_c-form.scss
@@ -7,7 +7,7 @@
     margin-right: auto;
   }
 
-  + p {
+  + div.hs-form-sub-text {
     margin-top: rem-size(20px);
   }
 
